--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.1.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
+    "fawn": "^2.1.5",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1"
