Adição de funcionalidades para lidar com problemas de CORS.

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -3,3 +3,4 @@ DB_PASS=avanade01
 DB_CONNECTION=mongodb://${DB_USER}:${DB_PASS}@ds056419.mlab.com:56419/avanade-internet-banking
 PORT=3000
 JWT_SECRET= ce953cc4eb85c6e4364b96dc4dfb5d93
+FRONTEND_ADDRESS=http://localhost:4200
