--- a/FrontEnd/banking-pif3/package.json
+++ b/FrontEnd/banking-pif3/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "angular-authentication-service": "^1.1.8",
+    "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
