Inserção de paginas

--- a/FrontEnd/banking-pif3/angular.json
+++ b/FrontEnd/banking-pif3/angular.json
@@ -81,7 +81,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [ 
+               "src/funcoes.js",
+              "src/jspdf.min.js"],
             "assets": [
               "src/favicon.ico",
               "src/assets"
